--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -11,6 +11,7 @@
       <th>Option3</th>
       <th>Option4</th>
       <th>Answer</th>
+      <th>Explanation</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -24,6 +25,7 @@
         <td><%= question.option3 %></td>
         <td><%= question.option4 %></td>
         <td><%= question.answer %></td>
+        <td><%= question.explanation %></td>
         <td><%= link_to 'Show', question %></td>
         <td><%= link_to 'Edit', edit_question_path(question) %></td>
         <td><%= link_to 'Destroy', question, method: :delete, data: { confirm: 'Are you sure?' } %></td>
