--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -30,5 +30,10 @@
   <%= @question.answer %>
 </p>
 
+<p>
+  <strong>Explanation:</strong>
+  <%= @question.explanation %>
+</p>
+
 <%= link_to 'Edit', edit_question_path(@question) %> |
 <%= link_to 'Back', questions_path %>
