--- a/app/views/test_questions/index.html.haml
+++ b/app/views/test_questions/index.html.haml
@@ -1,19 +1,42 @@
-
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script>
+$(content).hide();
+$(document).ready(function(){
+$("button").click(function(){
+$(content).show();
+});
+});
+</script>
 %h1 Take the Test
 
 = form_tag test_questions_path, :id => 'test_form', :method => 'get' do
   - @questions.each_with_index do |question, i|
-    = question.content
-    = @correctness[question.id]
+    %p
     %br
-  //  %select{:name => "answers[#{question.id}]"}
-      %input{:type => 'radio', :value => 'option1', :selected => @answers[question.id] == 'option1'}= question.option1
-      %input{:type => 'radio', :value => 'option2', :selected => @answers[question.id] == 'option2'}= question.option2
-      %input{:type => 'radio', :value => 'option3', :selected => @answers[question.id] == 'option3'}= question.option3
-      %input{:type => 'radio', :value => 'option4', :selected => @answers[question.id] == 'option4'}= question.option4
-  //  %br
+    =question.content
+    #content_q
+      .left.column
+        %input{:type => 'radio', :value => "#{question.option1}", :selected => @answers[question.id] == 'option1', :name => "answers[#{question.id}]"}= question.option1
+        %br
+        %input{:type => 'radio', :value => "#{question.option2}", :selected => @answers[question.id] == 'option2', :name => "answers[#{question.id}]"}= question.option2
+        %br
+        %input{:type => 'radio', :value => "#{question.option3}", :selected => @answers[question.id] == 'option3', :name => "answers[#{question.id}]"}= question.option3
+        %br
+        %input{:type => 'radio', :value => "#{question.option4}", :selected => @answers[question.id] == 'option4', :name => "answers[#{question.id}]"}= question.option4
+      %br
     %br
-  = submit_tag 'Submit All', :id => 'submit_test'
-
-
+    
+    #content
+      The correct Answer is 
+      =@correct_answer[question.id]
+      %br
+      And the user selected answer is
+      =@answers[question.id] 
+      %br
+      So it was 
+      =@correctness[question.id]
+    %br
+  %br
+  %button{ :value => 'Submit All', :id => 'submit_test', :onclick => "myFunction();" }Submit All
+  
   
