review feature passes all tests; allows blank answers

--- a/app/views/test_questions/index.html.haml
+++ b/app/views/test_questions/index.html.haml
@@ -1,12 +1,27 @@
 
 %h1 Take the Test
 
+%table#review
+  %thead
+    %tr
+      - @correctness.each do |id, val|
+        - if val == "[true]"
+          %th#true= id
+        - elsif val == "[false]"
+          %th#false= id
+        - else
+          %th= id
+
+%br
+
 = form_tag test_questions_path, :id => 'test_form', :method => 'get' do
   - @questions.each_with_index do |question, i|
+    = "#{question.id}."
     = question.content
     = @correctness[question.id]
     %br
     %select{:name => "answers[#{question.id}]"}
+      %option{:value => 'blank', :selected => @answers[question.id] == 'blank'}
       %option{:value => 'option1', :selected => @answers[question.id] == 'option1'}= question.option1
       %option{:value => 'option2', :selected => @answers[question.id] == 'option2'}= question.option2
       %option{:value => 'option3', :selected => @answers[question.id] == 'option3'}= question.option3
@@ -14,6 +29,3 @@
     %br
     %br
   = submit_tag 'Submit All', :id => 'submit_test'
-
-
-  
