Temporary changes for summary feature

--- a/app/views/test_questions/index.html.haml
+++ b/app/views/test_questions/index.html.haml
@@ -42,3 +42,6 @@
     %hr
   %br
   %button{:value => 'Submit All', :id => 'submit_test'}Submit All
+  
+  = debug @count
+  = link_to 'Summary', summary_path , :id => 'summary'
