Completed type and explanation

--- a/app/views/questions/_form.html.erb
+++ b/app/views/questions/_form.html.erb
@@ -15,7 +15,7 @@
   
   <div class="actions">
     <%= form.label :qtype, 'Type of question' %>
-    <select name="qtype" onchange="if (this.selectedIndex) myFunction();" id="question_qtype_id">
+    <select name="qtype" onchange="if (this.selectedIndex) myFunction();" id="question_qtype">
       <option>T/F</option>
       <option>MCQ</option>
     </select>
