--- a/app/views/questions/_form.html.erb
+++ b/app/views/questions/_form.html.erb
@@ -10,29 +10,39 @@
       </ul>
     </div>
   <% end %>
+  
+  <%= javascript_include_tag('question.js') %>
+  
+  <div class="actions">
+    <%= form.label :qtype, 'Type of question' %>
+    <select name="qtype" onchange="if (this.selectedIndex) myFunction();" id="question_qtype">
+      <option>T/F</option>
+      <option>MCQ</option>
+    </select>
+  </div>
 
   <div class="field">
     <%= form.label :content %>
     <%= form.text_area :content, size: "100x20", id: :question_content %>
   </div>
 
-  <div class="field">
-    <%= form.label :option1 %>
+  <div id="opt1" class="field">
+    <%= form.label :option1, "First option" %>
     <%= form.text_area :option1, size: "20x5", id: :question_option1 %>
   </div>
 
-  <div class="field">
-    <%= form.label :option2 %>
+  <div id="opt2" class="field">
+    <%= form.label :option2, "Second option" %>
     <%= form.text_area :option2, size: "20x5", id: :question_option2 %>
   </div>
 
-  <div class="field">
-    <%= form.label :option3 %>
+  <div id="opt3" class="field">
+    <%= form.label :option3, "Third option" %>
     <%= form.text_area :option3, size: "20x5", id: :question_option3 %>
   </div>
 
-  <div class="field">
-    <%= form.label :option4 %>
+  <div id="opt4" class="field">
+    <%= form.label :option4, "Fourth option" %>
     <%= form.text_area :option4, size: "20x5", id: :question_option4 %>
   </div>
   
@@ -40,7 +50,12 @@
     <%= form.label :answer %>
     <%= form.text_area :answer, size: "20x5", id: :question_answer %>
   </div>
-
+  
+  <div class="field">
+    <%= form.label :explanation %>
+    <%= form.text_area :explanation, size: "20x5", id: :question_explanation %>
+  </div>
+  
   <div class="actions">
     <%= form.submit %>
   </div>
