--- a/app/views/test_questions/index.html.haml
+++ b/app/views/test_questions/index.html.haml
@@ -1,3 +1,12 @@
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script>
+$(summary).hide();
+$(document).ready(function(){
+$("submit_test").click(function(){
+$(summary).show();
+});
+});
+</script>
 %h1 Take the Test
 
 %table#review
@@ -46,3 +55,5 @@
     %hr
   %br
   %button{:value => 'Submit All', :id => 'submit_test'}Submit All
+  
+  = link_to 'Summary', summary_path , :id => 'summary' 
