--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,7 @@
     <%= csrf_meta_tags %>
   </head>
   <body>
+    <!--<p>pages ppppppppppppppppppppp</p>-->
     <header>
       <%= render 'layouts/navigation' %>
     </header>
