--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -7,6 +7,7 @@
           <% @users.each do |user| %>
             <tr>
               <%= render user %>
+              <p>paragraph</p>
             </tr>
           <% end %>
         </tbody>
