Adding explanation to summary page

--- a/app/views/test_questions/summary.html.haml
+++ b/app/views/test_questions/summary.html.haml
@@ -9,5 +9,9 @@
     %br
     = question[question.answer]
     %br
+    %strong
+    Explanation:
+    = question.explanation
+    %br
     %br
 = link_to 'Done', root_path 
