--- a/app/views/layouts/_nav_links_for_auth.html.erb
+++ b/app/views/layouts/_nav_links_for_auth.html.erb
@@ -1,4 +1,5 @@
 <% if user_signed_in? %>
+  <li><%= link_to "Take the test!", test_questions_path %></li>
   <li><%= link_to 'Edit account', edit_user_registration_path %></li>
   <li><%= link_to 'Sign out', destroy_user_session_path, :method=>'delete' %></li>
 <% else %>
@@ -7,6 +8,7 @@
 <% end %>
 <% if user_signed_in? %>
   <% if current_user.admin? %>
+    <li><%= link_to "Add Questions", questions_path %></li>
     <li><%= link_to 'Users', users_path %></li>
   <% end %>
 <% end %>
