--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -1,2 +1,10 @@
-<h3>Welcome2</h3>
-<p><%= link_to 'Users:', users_path %> <%= User.count %> registered</p>
+<div class="center jumbotron">
+  <h1>Welcome to the Self Evaluation System</h1>
+  <h2>
+    Click "Log in" in top menu bar to Log-in if you already have an account otherwise click the button below to sign-up.
+  </h2>
+  <%= link_to "Sign up now!", new_user_registration_path, class: "btn btn-lg btn-primary" %>
+</div>
+
+<%= link_to image_tag("tamu.png", alt: "tamu logo", style: "height: 20%; width: 20%"),
+            'http://www.tamu.edu' %>
