Fixed summary bug
Check 24

check 25

check 26

check 27

check 28

check 29

check 30

ch 31

check 32

check 33

check 34

Final:summary bug fixed

--- a/app/views/test_questions/index.html.haml
+++ b/app/views/test_questions/index.html.haml
@@ -1,9 +1,9 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script>
-$(summary).hide();
+$(summa).hide();
 $(document).ready(function(){
 $("submit_test").click(function(){
-$(summary).show();
+$(summa).show();
 });
 });
 </script>
@@ -55,4 +55,4 @@ $(summary).show();
   %br
   %button{:value => 'Submit All', :id => 'submit_test'}Submit All
   
-  = link_to 'Summary', summary_path , :id => 'summary' 
+  = link_to 'Summary', {:controller => "test_questions", :action => "summary", :count => @count}, :id => 'summa'
