Image add check 1

--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -6,6 +6,11 @@
 </p>
 
 <p>
+  <strong>Image:</strong>
+  <%= image_tag @pet.image.thumb.url %>
+</p>
+
+<p>
   <strong>Option1:</strong>
   <%= @question.option1 %>
 </p>
