--- a/app/views/questions/_form.html.erb
+++ b/app/views/questions/_form.html.erb
@@ -56,6 +56,16 @@
     <%= form.text_area :explanation, size: "20x5", id: :question_explanation %>
   </div>
   
+  <div class="field">
+    <%= form.label :image %><br>
+    <%= form.file_field :image %>
+    <% if form.object.image? %>
+      <%= image_tag form.object.image.thumb.url %>
+      <%= form.label :remove_image %>
+      <%= form.check_box :remove_image %> 
+    <% end %>
+  </div>
+  
   <div class="actions">
     <%= form.submit %>
   </div>
