image add changes 1

--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -7,7 +7,7 @@
 
 <p>
   <strong>Image:</strong>
-  <%= image_tag @pet.image.thumb.url %>
+  <%= image_tag @question.image.thumb.url %>
 </p>
 
 <p>
