--- a/app/assets/stylesheets/questions.css
+++ b/app/assets/stylesheets/questions.css
@@ -13,3 +13,58 @@
 #opt4{
     display:none;
 }
+
+#new_question{
+    text-decoration: underline;
+}
+
+#show:link, #show:visited {
+    background-color: blue;
+    color: white;
+    padding: 14px 25px;
+    text-align: center; 
+    text-decoration: none;
+    display: inline-block;
+}
+
+#show:hover, #show:active {
+    background-color: red;
+}
+
+#edit:link, #edit:visited {
+    background-color: blue;
+    color: white;
+    padding: 14px 25px;
+    text-align: center; 
+    text-decoration: none;
+    display: inline-block;
+}
+
+#edit:hover, #edit:active {
+    background-color: red;
+}
+
+#destroy:link, #destroy:visited {
+    background-color: blue;
+    color: white;
+    padding: 14px 25px;
+    text-align: center; 
+    text-decoration: none;
+    display: inline-block;
+}
+
+#destroy:hover, #destroy:active {
+    background-color: red;
+}
+#show{
+    text-decoration: underline;
+}
+
+#edit{
+    text-decoration: underline;
+}
+
+#destroy{
+    text-decoration: underline;
+}
+
