--- a/app/views/test_questions/summary.html.haml
+++ b/app/views/test_questions/summary.html.haml
@@ -5,13 +5,22 @@
 %h3 The questions with the right answers are:
 %br
 - @questions.each_with_index do |question, i|
-    = question.content 
+
+    = question.content
     %br
+    <strong>Correct Answer:</strong>
     = question[question.answer]
     %br
-    %strong
-    Explanation:
+    <strong>Your answer:</strong>
+    -if #{question[@answers[question.id.to_s]]} != nil
+    = question[@answers[question.id.to_s]]
+    -else
+    You left it blank!
+    -end
+    %br
+    <strong>Explanation:</strong>
     = question.explanation
     %br
     %br
-= link_to 'Done', root_path 
+    %br
+= link_to 'Done', root_path , :id => 'done'
