--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -7,7 +7,7 @@
 
 <p>
   <strong>Image:</strong>
-  <%= image_tag @question.image.thumb.url %>
+  <%= image_tag @question.image_url(:thumb).to_s if @question.image_url.present? %>
 </p>
 
 <p>
