equations feature passes

--- a/app/views/test_questions/index.html.haml
+++ b/app/views/test_questions/index.html.haml
@@ -56,3 +56,5 @@ $(summa).show();
   %button{:value => 'Submit All', :id => 'submit_test'}Submit All
   
   = link_to 'Summary', {:controller => "test_questions", :action => "summary", :count => @count}, :id => 'summa'
+
+<script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.4/MathJax.js?config=TeX-MML-AM_CHTML' async></script>
