--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -36,7 +36,7 @@
           <% @users.each do |user| %>
             <tr>
               <%= render user %>
-              <p>paragraph</p>
+              <!--<p>paragraph</p>-->
             </tr>
           <% end %>
         </tbody>
