--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -4,7 +4,7 @@
 <td>
   <%= form_for(user) do |f| %>
     <%= f.select(:role, User.roles.keys.map {|role| [role.titleize,role]}) %>
-    <%= f.submit 'Change Role', :class => 'button-xs' %>
+    <%= f.submit 'Change Role', :class => 'button-xs',:data => {:confirm => "Are you sure you want to change the role?"}%>
   <% end %>
 </td>
 <td>
