--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -1,3 +1,6 @@
+@import "bootstrap-sprockets";
+@import "bootstrap";
+
 body {
   background-color: #fff;
   color: #333;
@@ -19,6 +22,19 @@ pre {
   font-size: 11px;
 }
 
+.right
+ {
+  color: #000;
+
+  &:visited {
+    color:  #000;
+  }
+
+  &:hover {
+    color: $gray-darker;
+  }
+}
+
 a {
   color: #000;
 
@@ -28,7 +44,7 @@ a {
 
   &:hover {
     color: #fff;
-    background-color: #000;
+    //background-color: #000;
   }
 }
 
