Change for displaying images on summary
Check 2

--- a/app/views/test_questions/summary.html.haml
+++ b/app/views/test_questions/summary.html.haml
@@ -7,6 +7,8 @@
 - @questions.each_with_index do |question, i|
   -if @answers!=nil
     = question.content
+    <% if question.image_url.present? %>
+    =question.image_url
     %br
     <strong>Correct Answer:</strong>
     = question[question.answer]
