--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -1,5 +1,6 @@
 <p id="notice"><%= notice %></p>
 
+
 <p>
   <strong>Content:</strong>
   <%= @question.content %>
@@ -39,6 +40,12 @@
   <strong>Explanation:</strong>
   <%= @question.explanation %>
 </p>
+
+<p>
+  <strong>Topic:</strong>
+  <%= @question.topic %>
+</p>
+
 
 <%= link_to 'Edit', edit_question_path(@question) %> |
 <%= link_to 'Back', questions_path %>
