--- a/app/views/questions/_form.html.erb
+++ b/app/views/questions/_form.html.erb
@@ -2,20 +2,18 @@
 $(document).ready(function ()
 {
   var elem = document.getElementById("question_qtype");
-  console.log('hi')
-  console.log(elem.value);
   var hiddenDiv1 = document.getElementById("opt1");
-  hiddenDiv1.style.display = (elem.value == "T/F") ? "none":"block";
+  hiddenDiv1.style.display = (elem.value == "True or False") ? "none":"block";
   var hiddenDiv2 = document.getElementById("opt2");
-  hiddenDiv2.style.display = (elem.value == "T/F") ? "none":"block";
+  hiddenDiv2.style.display = (elem.value == "True or False") ? "none":"block";
   var hiddenDiv3 = document.getElementById("opt3");
-  hiddenDiv3.style.display = (elem.value == "T/F") ? "none":"block";
+  hiddenDiv3.style.display = (elem.value == "True or False") ? "none":"block";
   var hiddenDiv4 = document.getElementById("opt4");
-  hiddenDiv4.style.display = (elem.value == "T/F") ? "none":"block";
+  hiddenDiv4.style.display = (elem.value == "True or False") ? "none":"block";
   var r1 = document.getElementsByClassName("radiobutton");
   for (var i = 2, length = r1.length; i < 4; i++)
   {
-    if (elem.value == "T/F")
+    if (elem.value == "True or False")
     {
       r1[i].checked = false;
       r1[i].style.visibility = "hidden";
@@ -24,9 +22,8 @@ $(document).ready(function ()
     {
       r1[i].style.visibility = "visible";
     }
-    console.log(r1[i].value)
   }
-  if (elem.value == "T/F")
+  if (elem.value == "True or False")
   {
     document.getElementById("Option1").firstChild.data = "True";
     document.getElementById("Option2").firstChild.data = "False";
@@ -40,9 +37,8 @@ $(document).ready(function ()
     document.getElementById("Option3").firstChild.data = "Option 3";
     document.getElementById("Option4").firstChild.data = "Option 4";
   }
-  console.log(r1)
-  var r2 = document.getElementById("Option1");
-  console.log(r2.firstChild.data);
+  
+  console.log(document.getElementById("question_image"));
 })
 </script>
 
@@ -62,15 +58,15 @@ $(document).ready(function ()
   <div class="actions" >
     <%= form.label :qtype, 'Type of question (Select this first)' %>
     <select name="qtype" onchange="if (this.selectedIndex) myFunction();" onload="function();" id="question_qtype">
-      <%if question.qtype == "T/F"%>
-        <option selected="selected">T/F</option>
+      <%if question.qtype == "True or False"%>
+        <option selected="selected">True or False</option>
       <%else%>
-        <option>T/F</option>
+        <option>True or False</option>
       <%end%>
-      <%if question.qtype == "MCQ"%>
-        <option selected="selected">MCQ</option>
+      <%if question.qtype == "Multiple Choice"%>
+        <option selected="selected">Multiple Choice</option>
       <%else%>
-        <option>MCQ</option>
+        <option>Multiple Choice</option>
       <%end%>
     </select>
   </div>
@@ -123,7 +119,12 @@ $(document).ready(function ()
   <div class="field">
     <%= form.label :image , "Image (only jpg, jpeg, gif and png files)"%>
     <%= form.file_field :image, size: "5x2", id: :question_image %>
-    <%= image_tag @question.image_url(:thumb) if @question.image_url.present? %>
+    <% if @question.image_url.present? %>
+      <%= image_tag(@question.image_url(:thumb), :align=>"leFt") %>
+      <% 21.times do %>
+        <br>
+      <% end %>
+    <% end %>  
     <% if @question.image_url.present? %>
       <%= form.check_box :remove_question_image %> Remove Image
     <% end %>
