--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -1,6 +1,5 @@
 <p id="notice"><%= notice %></p>
 
-
 <p>
   <strong>Content:</strong>
   <%= @question.content %>
@@ -16,6 +15,11 @@
       <br>
     <% end %>
   <% end %>
+</p>
+
+<p>
+  <strong>Qtype:</strong>
+  <%= @question.qtype %>
 </p>
 
 <p>
